# myproject

./: .gitignore  build.gradle  git diff hash1 hash2 --stat  gradle.properties  project_configuration.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: android2javascript.html  school.json
app/src/main/cpp/: JniXapiCalibData.cpp  launchScan.cpp  pi_common_type.h  pi_dualcam_distance.h
app/src/main/cpp/include_709/: JniXapiCalibData.cpp
app/src/main/cpp/include_712/: JniXapiCalibData.cpp  pi_dualcam_distance.h
app/src/main/cpp/include_717/: JniXapiCalibData.cpp  pi_dualcam_common.h
app/src/main/cpp/include_leia/: JniXapiCalib.cpp  XapiCalibImpl.cpp  XapiCalibImpl.h  pi_calib.h
app/src/main/jni/: com_my_project_test_jni_JNIUtils.h  testjni.c
app/src/main/res/drawable/: check_green.xml  green_progres.xml  icon_home_page_selector.xml  shape_bg_autoeditview.xml  shape_bg_organization_introduce.xml  shape_lines_autocompletetextview.xml  shape_shopping_red.xml  vector_add_capture.xml
app/src/main/res/layout/: activity_adjust_volume_custom.xml  activity_aidl.xml  activity_anim.xml  activity_app_upload.xml  activity_custom_attr.xml  activity_custom_polygon.xml  activity_custom_turntable.xml  activity_customer_weather_rains.xml  activity_customview_sliding_puzzle.xml  activity_data_picker.xml  activity_home_page.xml  activity_love.xml  activity_main.xml  activity_make_jni.xml  activity_materical_dialog.xml  activity_mpandroid_chart.xml  activity_mvp.xml  activity_organization.xml  activity_organization_personlist.xml  activity_party_member.xml  activity_rx_java.xml  activity_search_organization.xml  activity_shopping_cart.xml  activity_sufaceview.xml  activity_test_dispatch_touch_event.xml  activity_test_image_choose.xml  activity_test_more_list.xml  activity_test_nfc_change_account.xml  activity_test_player.xml  activity_test_progressbar.xml  activity_test_refershing.xml  activity_test_touch_event.xml  activity_test_video.xml  activity_test_view_custom.xml  activity_vector.xml  activity_viewgrounp_custom.xml  custom_tab.xml  fragment_home_page.xml  fragment_message.xml  fragment_text_xml.xml  (+19 more)
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  (+1 more)
app/src/main/res/values-hdpi/: dimens.xml
app/src/main/res/values-ldpi/: dimens.xml
app/src/main/res/values-mdpi/: dimens.xml
app/src/main/res/values-xhdpi/: dimens.xml
app/src/main/res/values-xxhdpi/: dimens.xml
(+259 files in other folders)
